2004-02-05  Christian Ruppert <arc@users.sf.net>
	* po/it.po, configure.in: added italian language support. Many thanks
	  to Diego Bertone.

2004-01-14  Christian Ruppert <arc@users.sf.net>
	* uwm/special.c (CheckCPP): fixed a bug in the backported cpp check.

2004-12-05  Christian Ruppert <arc@users.sf.net>
	* RELEASE: ude-0.2.9b
	* configure.in: changed version to 0.2.9b
	* doc/Makefile.am: changed .gif to .png
	* NEWS: updated to reflect changes since 0.2.9a

2004-11-24  Christian Ruppert <arc@users.sf.net>
	* uwm/windows.c(MoveResizeWindow): fixed bug that windows with static
	  gravity aren't properly moved/resized.
	* uwm/handlers.c(HandleFocusOut): fixed bug that sometimes erroneously
	  displayed new windows as if they had the focus although they had not.

2004-10-14  Christian Ruppert <arc@users.sf.net>
	* uwm/urdb: fixed a typo in gvim resources

2004-10-13  Christian Ruppert <arc@users.sf.net>
	* config/urdb: added some selected Xt-resources for text boxes.
	* config/urdb: added some more resources for non-gtk gvim

2004-09-09  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c(InitHandlers): uwm now stops at initialisation in
	  case no shapes extension is found.
	* uwm/uwm.h: changed type of TheScreen.cppcall to char*
	* uwm/special.c(MyOpen and CheckCPP): now using uwm-0.3 versions of
	  these functions.

2003-12-01  Christian Ruppert <arc@users.sf.net>
	* RELEASE: ude-0.2.9a
	* lib/Makefile.am: fixed rpm built. obsolete library headers are no
	  longer installed.

2003-11-30  Christian Ruppert <arc@users.sf.net>
	* RELEASE: ude-0.2.9
	* uwm/Makefile.am: removed tree.c and tree.h from built and
	  distribution
	* uwm/handlers.c: uwm no longer outputs usually meaningless error
	  messages when compiled without debugging
	* configure.in: changed version
	* README: updated
	* NEWS: updated

2003-11-25  Christian Ruppert <arc@users.sf.net>
	* uwm/windows.c: fixed a bug in focus management (ActivateWin now no